--- a/app/view/LoggedDC.fragment.xml
+++ b/app/view/LoggedDC.fragment.xml
@@ -111,7 +111,7 @@
 
             <OverflowToolbar id="otb2">
                 <ToolbarSpacer/>
-                <Button text="Close" type="Transparent" press="onExitDC"/>
+                <Button text="Close" press="onExitDC" class="closeButton"/>
 
             </OverflowToolbar>
         </l:VerticalLayout>
