changes a operations,log dc e popup workinstructions

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -30,6 +30,10 @@
     background: #ff282d;
 
 }
+.espandi {
+    width:30rem;
+    font-size: 2rem;
+}
 .sapMITBFilterDefault {
     color: #ff282d;
 }
