--- a/app/css/style.css
+++ b/app/css/style.css
@@ -13,6 +13,9 @@
 .sapMList {
     border: 1px solid #ccc;
 }
+.sapMStdTileInfo {
+    margin-top: -48%;
+}
 
 .ui-sortable {
     min-height: 40px;
@@ -105,7 +108,10 @@
     width: auto !important;
 }
 .sapMStdTileTitle {
+    color: #7d7d7d;
+
     font-size:25px;
+    margin-top: 18%;
 }
 .myapp{
     background-color: #f0f0f0 !important;
@@ -597,7 +603,7 @@ html.sap-desktop .sapMComboBoxBasePressed
 {
 
     height: 100%;
-    margin-top: -15px;
+    /*margin-top: -15px; */
 }
 
 .dcView .sapMBtnInner
