--- a/app/view/MainPod.view.xml
+++ b/app/view/MainPod.view.xml
@@ -131,7 +131,7 @@
                          <!--<comp:PodButton width="120px" press="openGraph"
                                         icon="sap-icon://column-chart-dual-axis" iconSize="3.5rem"
                                         text="Graph" class="sapUiSmallMarginTop"/>-->
-                        <comp:PodButton width="120px" press=""
+                        <comp:PodButton width="120px" press="sendSetupPP"
                                         icon="sap-icon://connected" iconSize="3.5rem"
                                         text="Invia Setup Macchina" enabled="{=${/ena} === '1'}" class="sapUiSmallMarginTop"/> 
                     </FlexBox>
