--- a/app/view/Machine.view.xml
+++ b/app/view/Machine.view.xml
@@ -25,11 +25,11 @@
             </Bar>
         </customHeader>
 
-
            
         <TileContainer
             id="container"
             tileDelete="handleTileDelete"
+            class="allarga"
             tiles="{/}">
             <StandardTile
                 icon="{icon}"
